<?xml version="1.0" encoding="UTF-8"?><!--
  ~ Copyright (c) 2021, Linktop Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".dfu.DfuActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/feature_device_name_margin_top"
        android:ellipsize="end"
        android:freezesText="true"
        android:maxLines="1"
        android:text="@string/dfu_default_name"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:freezesText="true"
        android:maxLines="1"
        android:textAllCaps="true" />


    <!-- Application section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/feature_horizontal_margin"
        android:layout_marginTop="@dimen/feature_vertical_margin_top"
        android:layout_marginEnd="@dimen/feature_horizontal_margin"
        android:background="@drawable/shape_background_frame"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/dfu_section_application_header"
            android:textColor="@android:color/white" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/feature_section_padding">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_file_name_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/file_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ellipsize="middle"
                    android:freezesText="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_file_size_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:freezesText="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_file_status_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/file_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:freezesText="true"
                    android:text="@string/dfu_file_status_no_file" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="@dimen/feature_section_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="42dp"
            android:paddingEnd="0dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_select_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectFileClicked"
                android:text="@string/dfu_action_select_file" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:onClick="onSelectFileHelpClicked"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_help" />
        </LinearLayout>
    </LinearLayout>

    <!-- DFU section -->

    <LinearLayout
        android:id="@+id/dfu_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/feature_horizontal_margin"
        android:layout_marginTop="@dimen/feature_vertical_margin_top"
        android:layout_marginEnd="@dimen/feature_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_background_frame"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/dfu_section_dfu_header"
            android:textColor="@android:color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textviewProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feature_section_padding"
            android:freezesText="true"
            android:text="@string/dfu_uploading_percentage_label"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progressbar_file"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:max="100"
            android:visibility="invisible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textviewUploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feature_section_padding"
            android:freezesText="true"
            android:text="@string/dfu_status_uploading"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feature_section_padding"
            android:enabled="false"
            android:onClick="onUploadClicked"
            android:text="@string/dfu_action_upload" />
    </LinearLayout>

</LinearLayout>